assets/css/style.css
/* Navbar */

.navbar-brand {
    background-image: url("../images/code.jpg");
    background-size: 500px;
    background-color: black;
    padding: 20px;
    width:500px;
    margin-left: 12% !important;
    padding-bottom: none;
    -webkit-text-stroke: 3px black;
}

nav h1 {
    font-size: 45px;
    font-family: 'Bowlby One SC', cursive;
}

.navbar {
    border-bottom: 2px solid #cccccc;
}

.nav-link {
    margin-right: 30px;
    font-size: 25px;
    font-weight: bold;
}

.navbar-nav {
    margin-right: 100px;
}

/* Body */

body {
    background-image: url("../images/grunge_wall.png");
    font-family: 'Alegreya Sans', sans-serif;
}

.about-text {
    font-size: 22px !important;
}

#about-image {
    width:300px;
}

.card-title {
    font-family: 'Bowlby One SC', cursive;
}

#contact-card h4 p {
    font-family: 'Times New Roman', Times, sans-serif;
}

#contact-card p {
    font-size: 22px;
}

#contact-card h4 {
    font-weight: bold;
    font-size: 26px;
}

/* Main Content */

hr{
    border-top: 1px solid #dddddd;
    width: 95%;
    margin-left: auto;
    margin-right: auto;
    margin-bottom: 30px;
}

.imglinks {
    width: 100%;
    border: 3px solid #cccccc !important;
    border-bottom: none !important;
}

p span {
    font-size:15px;
}

button {
    border: 3px solid #cccccc !important;
}

.github-button {
    border-top: none !important;
}

/* Footer */

.footer {
    background-color: #666;
    border-top: 3px solid black;
    padding-top: 25px;
    padding-bottom: 10px;
}

/* Media Queries */

@media screen and (max-width: 980px) {
    .navbar-brand {
        background-size: 100%;
        background-color: black;
        padding: 20px;
        width:500px;
        margin-left: 12% !important;
        padding-bottom: none;
        -webkit-text-stroke: 3px black;
    }
    
    nav h1 {
        font-size: 45px;
        font-family: 'Bowlby One SC', cursive;
    }
    
    .nav-link {
        margin-right: 30px;
        font-size: 35px;
        font-weight: bold;
    }

    body {
        font-size: 30px !important;
    }

    .about-text {
        font-size: 30px !important;
    }

    #about-image {
        width: 50%;
    }

    #contact-card p {
        font-size: 30px;
    }
    
    #contact-card h4 {
        font-weight: bold;
        font-size: 35px;
    }

    p span {
        font-size:20px;
    }
}

@media screen and (max-width: 768px) {

    nav .navbar-brand {
        background-size: 100%;
        background-color: black;
        padding: none !important;
        width:100%;
        margin-left: none !important;
        padding-bottom: none;
        -webkit-text-stroke: 3px black;
    }
    
    nav h1 {
        font-size: 45px;
        font-family: 'Bowlby One SC', cursive;
    }
    
    .nav-link {
        margin-right: 30px;
        font-size: 35px;
        font-weight: bold;
    }

    body {
        font-size: 30px !important;
    }

    .about-text {
        font-size: 40px !important;
    }

    #about-image {
        width: 100%;
    }

    #contact-card p {
        font-size: 40px;
    }
    
    #contact-card h4 {
        font-weight: bold;
        font-size: 45px;
    }

    p span {
        font-size:25px;
    }

}

